css/style.css
/* ... */
@media only screen and (max-width: 1100px) {
  body,
  .container {
    overflow-y: scroll !important;
    overscroll-behavior-y: unset !important;
    -webkit-tap-highlight-color: transparent;
  }

  .section {
    height: unset;
  }

  .remove-on-mobile {
    display: none;
  }

  .remove-on-desktop {
    display: block !important;
  }

  .stop-scroll {
    position: fixed;
    width: 100%;
  }

  .modal-full-page {
    height: 100vh;
    width: 100%;
  }

  .modal-full-page .modal-top-logo {
    position: absolute;
    top: 25px;
  }

  .modal-content img:nth-child(2),
  .modal-content h3,
  .modal-content #back-btn {
    transform: translateY(-40px);
  }

  .page-container {
    flex-direction: column;
    width: 85%;
  }

  .page-container-left,
  .page-container-right {
    width: 100%;
  }

  .page-heading {
    font-size: 36px;
    line-height: 44px;
  }

  .page-subheading {
    font-size: 32px;
    line-height: 39px;
    color: #e5ebf3;
    margin: 20px 0;
  }

  .more-info-wrapper {
    height: unset;
    align-items: unset;
  }

  .page-desc {
    font-size: 24px;
    line-height: 29px;
    color: #e5ebf3;
  }

  .video {
    width: 100% !important;
    height: 100% !important;
    padding: 0 40px;
  }

  /* navbar */

  #mobile-nav-menu {
    display: block;
    position: absolute;
    height: 95vh;
    width: 100%;
    top: 2%;
    background: #0e1016;
    z-index: 2;
    transform: translateY(-100%);
    transition: 0.7s all ease-in-out;
  }

  #mobile-nav-menu-links {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 90%;
    width: 100%;
  }

  #mobile-nav-menu-links .nav-link {
    font-size: 19px;
    line-height: 23px;
    margin-bottom: 30px;
    margin-right: 0;
  }

  .top-nav {
    margin-bottom: 40px;
    width: 90%;
    z-index: 2;
  }

  .top-nav-right,
  .top-nav-left {
    width: 50%;
  }

  .top-nav-right .btn {
    padding: 8px 25px;
  }

  #burger-icon {
    margin-left: 0;
  }

  /* page 1 */
  .page-1 .page-heading:nth-child(1) {
    padding-top: 140px;
    font-size: 36px;
    line-height: 44px;
  }

  .page-1 .page-heading:nth-child(2) {
    padding-bottom: 40px;
    font-size: 36px;
    line-height: 44px;
  }

  .page-1 .page-container-right {
    display: flex;
    justify-content: center;
  }

  .page-1-video {
    transform: unset;
  }
  .page-1-video-wrapper {
    transform: unset;
    width: 100% !important;
  }

  .page-1-video-wrapper video {
    transform: translateX(1px);
    width: 100%;
  }

  /* page 2 */
  .page-2 .btn {
    margin: 70px 0px;
  }

  .page-2-geo {
    right: -44px;
    transform: translate(22%, 29%);
    width: 100%;
  }

  .page-2-video {
    transform: unset;
    width: 100% !important;
    padding-bottom: 100px;
  }

  /* page-3 */
  .page-3 .btn {
    margin: 70px 0px;
  }

  .page-3 .page-container {
    flex-direction: column-reverse;
  }
  .page-3 .page-container-right {
    width: unset;
  }

  .page-3-geo {
    transform: translate(-50%, 67%);
  }

  .page-3-video {
    width: 100% !important;
    transform: unset;
    padding-bottom: 80px;
  }

  /* page-4 */
  .page-4-video {
    width: 100% !important;
    transform: unset;
    padding: 80px 0;
  }

  .page-4-geo {
    transform: translate(62%, 20%);
  }

  /* page-5 */

  .page-5 .page-5-content {
    transform: unset;
  }

  .page-5 .page-heading {
    text-align: center;
  }

  .page-5-geo {
    transform: translate(-50%, -126%);
  }

  .page-5-video-mask {
    overflow: hidden;
    height: 100px;
    width: 100%;
    margin: 0 auto;
  }

  .page-5-video {
    height: 100px;
    padding: 20px;
    padding-bottom: 10px;
    padding-top: 0;
    transform: translate(-50%, 20px) scale(1.4);
  }

  .subscribe-text {
    font-size: 32px;
    line-height: 39px;
    text-align: center;
    padding: 20px;
    padding-top: 30px;
  }

  /* mailchimp */

  .email-form-wrapper {
    width: 95%;
    margin-bottom: 40px;
  }

  .email-form {
    font-size: 16px;
    line-height: 20px;
    margin: 30px auto;
    margin-bottom: 5px;
    width: 85%;
    padding: 15px;
  }

  .email-field {
    font-size: 12px;
    line-height: 20px;
    width: 150px;
  }

  .email-form .btn {
    padding: 8px 25px;
  }

  .email-form .btn-gradient-wrapper {
    /* width: 100px; */
  }

  .mailchimp-response-wrapper {
    width: 85%;
    height: 35px;
    margin: 0 auto;
    margin-bottom: 50px;
  }

  #mailchimp-response {
    font-size: 11px;
    line-height: 18px;
  }

  .footer {
    flex-direction: column;
    transform: unset;
    position: unset;
    width: 85%;
    height: unset;
    align-items: flex-start;
  }

  .footer-left,
  .footer-right {
    margin-bottom: 20px;
  }

  .footer-right .nav-link {
    padding: 0;
  }

  .footer-right {
    width: 70%;
    padding-top: 10px;
  }

  .copyright {
    font-size: 14px;
    line-height: 21px;
    margin: 20px 0;
    text-align: left;
  }
}

